corrected day hour division

--- a/notebooks/teresa_eda.ipynb
+++ b/notebooks/teresa_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4                     2        1674  38.416481  -89.442638  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
        "[108 rows x 15 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,13 +574,33 @@
     "faults_nonservice['event_dayofweek'] = faults_nonservice['EventTimeStamp'].dt.dayofweek\n",
     "faults_nonservice['event_dayname'] = faults_nonservice['EventTimeStamp'].dt.day_name()\n",
     "faults_nonservice['event_hour'] = faults_nonservice['EventTimeStamp'].dt.hour\n",
-    "faults_nonservice['event_time_quadrant'] = faults_nonservice['EventTimeStamp'].dt.hour // 4\n",
-    "faults_nonservice['event_time_half'] = faults_nonservice['EventTimeStamp'].dt.hour // 2"
+    "faults_nonservice['event_time_quadrant'] = faults_nonservice['EventTimeStamp'].dt.hour // 6\n",
+    "faults_nonservice['event_time_half'] = faults_nonservice['EventTimeStamp'].dt.hour // 12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 2, 0])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "faults_nonservice['event_time_quadrant'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -684,12 +704,12 @@
        "      <td>4</td>\n",
        "      <td>Friday</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5714</th>\n",
@@ -708,8 +728,8 @@
        "      <td>2</td>\n",
        "      <td>Wednesday</td>\n",
        "      <td>13</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
@@ -732,8 +752,8 @@
        "      <td>4</td>\n",
        "      <td>Friday</td>\n",
        "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -757,11 +777,11 @@
        "      <td>Friday</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>83619</th>\n",
@@ -780,8 +800,8 @@
        "      <td>4</td>\n",
        "      <td>Friday</td>\n",
        "      <td>19</td>\n",
-       "      <td>4</td>\n",
-       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -832,8 +852,8 @@
        "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>964660</th>\n",
@@ -853,11 +873,11 @@
        "      <td>Saturday</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>794693</th>\n",
@@ -876,8 +896,8 @@
        "      <td>5</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -900,12 +920,12 @@
        "      <td>4</td>\n",
        "      <td>Friday</td>\n",
        "      <td>18</td>\n",
-       "      <td>4</td>\n",
-       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1015548</th>\n",
@@ -925,11 +945,11 @@
        "      <td>Friday</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -977,48 +997,48 @@
        "1015548   True                      1         306  ...         7   \n",
        "\n",
        "        event_dayofweek event_dayname event_hour event_time_quadrant  \\\n",
-       "996749                4        Friday          4                   1   \n",
-       "5714                  2     Wednesday         13                   3   \n",
-       "82873                 4        Friday          8                   2   \n",
+       "996749                4        Friday          4                   0   \n",
+       "5714                  2     Wednesday         13                   2   \n",
+       "82873                 4        Friday          8                   1   \n",
        "82607                 4        Friday          3                   0   \n",
-       "83619                 4        Friday         19                   4   \n",
+       "83619                 4        Friday         19                   3   \n",
        "...                 ...           ...        ...                 ...   \n",
        "1125718               1       Tuesday          0                   0   \n",
        "964660                5      Saturday          2                   0   \n",
-       "794693                5      Saturday         10                   2   \n",
-       "1139261               4        Friday         18                   4   \n",
+       "794693                5      Saturday         10                   1   \n",
+       "1139261               4        Friday         18                   3   \n",
        "1015548               4        Friday          6                   1   \n",
        "\n",
        "         event_time_half  derate_full  derate_partial  derate_full_quadrant  \\\n",
-       "996749                 2         True            True                 False   \n",
-       "5714                   6         True            True                  True   \n",
-       "82873                  4         True            True                 False   \n",
-       "82607                  1         True            True                 False   \n",
-       "83619                  9         True            True                 False   \n",
+       "996749                 0         True            True                 False   \n",
+       "5714                   1         True            True                  True   \n",
+       "82873                  0         True            True                 False   \n",
+       "82607                  0         True            True                 False   \n",
+       "83619                  1         True            True                 False   \n",
        "...                  ...          ...             ...                   ...   \n",
-       "1125718                0         True            True                 False   \n",
-       "964660                 1         True            True                 False   \n",
-       "794693                 5         True            True                 False   \n",
-       "1139261                9         True            True                 False   \n",
-       "1015548                3         True            True                 False   \n",
+       "1125718                0         True            True                  True   \n",
+       "964660                 0         True            True                  True   \n",
+       "794693                 0         True            True                 False   \n",
+       "1139261                1         True            True                  True   \n",
+       "1015548                0         True            True                  True   \n",
        "\n",
        "        derate_full_half  \n",
-       "996749             False  \n",
+       "996749              True  \n",
        "5714                True  \n",
        "82873              False  \n",
-       "82607              False  \n",
+       "82607               True  \n",
        "83619              False  \n",
        "...                  ...  \n",
-       "1125718            False  \n",
-       "964660             False  \n",
+       "1125718             True  \n",
+       "964660              True  \n",
        "794693             False  \n",
-       "1139261            False  \n",
-       "1015548            False  \n",
+       "1139261             True  \n",
+       "1015548             True  \n",
        "\n",
        "[334 rows x 27 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1171,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1440,7 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1682,7 @@
        "[5 rows x 49 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1673,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +2066,7 @@
        "[500 rows x 49 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2057,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2068,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2078,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2109,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2121,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2131,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
