--- a/notebooks/teresa_eda.ipynb
+++ b/notebooks/teresa_eda.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4                     2        1674  38.416481  -89.442638  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2098,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2108,28 +2108,28 @@
     "    # 'BarometricPressure' : [5, 10],\n",
     "    # 'CruiseControlSetSpeed' : [5, 10],\n",
     "    # 'DistanceLtd' : [5, 10],\n",
-    "    # 'EngineCoolantTemperature': [5, 10],\n",
+    "    'EngineCoolantTemperature': [180, 220],\n",
     "    # 'EngineLoad' : [5, 10],\n",
-    "    # 'EngineOilPressure' : [5, 10],\n",
-    "    # 'EngineOilTemperature': [5, 10],\n",
-    "    # 'EngineRpm': [5, 10],\n",
+    "    'EngineOilPressure' : [35, 50],\n",
+    "    'EngineOilTemperature': [180, 240],\n",
+    "    'EngineRpm': [1400, 1900],\n",
     "    # 'EngineTimeLtd': [5, 10],\n",
     "    # 'FuelLevel' : [5, 10],\n",
     "    # 'FuelLtd' : [5, 10],\n",
     "    # 'FuelRate' : [5, 10],\n",
     "    # 'FuelTemperature' : [5, 10],\n",
-    "    # 'IntakeManifoldTemperature' : [5, 10],\n",
+    "    'IntakeManifoldTemperature' : [60, 90],\n",
     "    # 'LampStatus' : [5, 10],\n",
     "    # 'Speed' : [5, 10],\n",
     "    # 'Throttle' : [5, 10],\n",
-    "    # 'TurboBoostPressure' : [5, 10],\n",
+    "    'TurboBoostPressure' : [36, 44],\n",
     "    'oil_cool_temp_diff' : [0, 25]\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
